style: enhance formatting

--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -2,57 +2,56 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "![eodag logo](https://eodag.readthedocs.io/en/latest/_static/eodag_logo.png)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Eodag search plugin user manual"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The eodag-labextension JupyterLab plugin brings satellite imagery search ability. With that extension you can search products, see results and check if results suits to your needs and finally generate Python code allowing to access to those products in the notebook.\n",
     "\n",
     "That tool is based on [eodag](https://eodag.readthedocs.io)."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Configuration\n",
     "\n",
     "For some providers we don’t need to set up credentials to search for products. But if you wish to download them, you should set the credentials beforehand, using these two environment variables for instance."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Example for PEPS\n",
     "os.environ[\"EODAG__PEPS__AUTH__CREDENTIALS__USERNAME\"] = \"PLEASE_CHANGE_ME\"\n",
     "os.environ[\"EODAG__PEPS__AUTH__CREDENTIALS__PASSWORD\"] = \"PLEASE_CHANGE_ME\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "You can always configure eodag with your code, as shown in the [Configuration](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/3_configuration.html) page of eodag's [Python API User Guide](https://eodag.readthedocs.io/en/stable/api_user_guide.html)."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Search\n",
     "\n",
@@ -72,11 +71,11 @@
     "Product type is mandatory. Other criterias are optional.\n",
     "\n",
     "Once search criteria are filled out, click on the \"Search\" button to proceed to next step. At the end of the search, a popup opens and displays results."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Results display\n",
     "\n",
@@ -91,31 +90,36 @@
     "The results table allows you to access product metadata by clicking on the desired product line. The magnifying glass button allows you to zoom in on the product's in the map view. By scrolling down in the list of results, the search is automatically restarted to retrieve the following results.\n",
     "\n",
     "In the metadata view, clicking on the thumbnail displays it in native resolution. Clicking it again reduces its size again."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Apply to the Jupyter notebook\n",
     "\n",
     "If the search result is correct, clicking on the \"Apply\" button will insert the Python eodag code in a new cell of the currently open notebook. The popup is automatically closed. From there, it is possible to work in the notebook on the search results by executing the eodag search.\n",
     "\n",
     "Here is an example of generated code:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from eodag import EODataAccessGateway\n",
+    "\n",
     "dag = EODataAccessGateway()\n",
-    "product_type = 'S2_MSI_L1C'\n",
-    "footprint = {'lonmin': 0.660957, 'latmin': 43.149093, 'lonmax': 2.388008, 'latmax': 44.190082}\n",
+    "product_type = \"S2_MSI_L1C\"\n",
+    "footprint = {\n",
+    "    \"lonmin\": 0.660957,\n",
+    "    \"latmin\": 43.149093,\n",
+    "    \"lonmax\": 2.388008,\n",
+    "    \"latmax\": 44.190082,\n",
+    "}\n",
     "cloud_cover = 15\n",
-    "start, end = '2019-02-01', '2019-02-15'\n",
+    "start, end = \"2019-02-01\", \"2019-02-15\"\n",
     "search_results, estimated_total_nbr_of_results = dag.search(\n",
     "    productType=product_type,\n",
     "    geometry=footprint,\n",
@@ -123,41 +127,41 @@
     "    completionTimeFromAscendingNode=end,\n",
     "    cloudCover=cloud_cover,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The eodag configuration file should be located at `$HOME/.config/eodag/eodag.yml`. See [eodag documentation](https://eodag.readthedocs.io/en/latest/intro.html#how-to-configure-authentication-for-available-providers) for further informations.\n",
     "\n",
     "You may want to enforce usage of a particular provider. To do so, use `set_preferred_provider` and then execute a query like previously:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"theia\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Using results\n",
     "\n",
     "Here are some examples about how to use search results into a notebook:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "\n",
@@ -166,77 +170,79 @@
     "\n",
     "# Display products access paths\n",
     "pprint([p.location for p in search_results])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Extract products extent"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from eodag.api.search_result import SearchResult\n",
+    "\n",
     "results_geojson = SearchResult(search_results).as_geojson_object()\n",
     "\n",
     "from shapely.geometry import shape, GeometryCollection\n",
-    "features = results_geojson['features']\n",
-    "features = GeometryCollection([shape(feature[\"geometry\"]).buffer(0) for feature in features])\n",
+    "\n",
+    "features = results_geojson[\"features\"]\n",
+    "features = GeometryCollection(\n",
+    "    [shape(feature[\"geometry\"]).buffer(0) for feature in features]\n",
+    ")\n",
     "features"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Display products extent on a slippy map"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import folium\n",
-    "from folium import plugins\n",
+    "from folium import Map, GeoJson, Figure\n",
+    "\n",
     "ext = features.bounds\n",
     "bounds = [[ext[1], ext[0]], [ext[3], ext[2]]]\n",
-    "m = folium.Map(\n",
-    "    tiles='Stamen Terrain',\n",
-    "    control_scale=True,\n",
-    ")\n",
-    "folium.GeoJson(results_geojson).add_to(m)\n",
+    "m = Map(tiles=\"Stamen Terrain\", control_scale=True,)\n",
+    "GeoJson(results_geojson).add_to(m)\n",
     "m.fit_bounds(bounds)\n",
-    "folium.Figure(width=500, height=300).add_child(m)"
-   ]
+    "Figure(width=500, height=300).add_child(m)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Downloading products\n",
     "\n",
     "To download products from the search request into a sub-directory called `download`, run:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dag.download_all(search_results)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Verbosity\n",
     "\n",
@@ -244,24 +250,25 @@
     "\n",
     "- INFO: `verbose=1`\n",
     "- DEBUG: `verbose=3`"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from eodag.utils.logging import setup_logging\n",
     "setup_logging(verbose=3)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "See [eodag documentation](https://eodag.readthedocs.io/) for more readings and tutorials about eodag library."
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
