--- a/notebooks/basic_usage.ipynb
+++ b/notebooks/basic_usage.ipynb
@@ -86,107 +86,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "0ef48e89fae44346be2b1d6177476d65": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_eb920f8926f8444b9bf70145b224ca1a",
-       "max": 115,
-       "style": "IPY_MODEL_696a86c337724e90960fd61a1dbdcd31",
-       "value": 115
-      }
-     },
-     "276bcce3428b4f8d98b8a9f69cec2cc6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "49f802690e134d29a6d678096c35d3ba": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "5607c9d7c3554d4cb81ccc27559c43db": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "display": "inline-flex",
-       "flex_flow": "row wrap",
-       "width": "100%"
-      }
-     },
-     "60b8924704c7410ba61a8e602feb2a10": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "696a86c337724e90960fd61a1dbdcd31": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "8782c7e158df41ceafc2ddccdded58cc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_ef84950e953247a4b4032c3b6965a5b9",
-        "IPY_MODEL_0ef48e89fae44346be2b1d6177476d65",
-        "IPY_MODEL_bb1cc1be33d5439aa0ad504495640412"
-       ],
-       "layout": "IPY_MODEL_5607c9d7c3554d4cb81ccc27559c43db"
-      }
-     },
-     "bb1cc1be33d5439aa0ad504495640412": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_cc6001cfb6f84d4685c325c88553c77b",
-       "style": "IPY_MODEL_60b8924704c7410ba61a8e602feb2a10",
-       "value": " 115/115 [00:01&lt;00:00, 66.19file/s]"
-      }
-     },
-     "cc6001cfb6f84d4685c325c88553c77b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "eb920f8926f8444b9bf70145b224ca1a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "flex": "2"
-      }
-     },
-     "ef84950e953247a4b4032c3b6965a5b9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_49f802690e134d29a6d678096c35d3ba",
-       "style": "IPY_MODEL_276bcce3428b4f8d98b8a9f69cec2cc6",
-       "value": "Extracting files from S2A_MSIL1C_20210810T104031_N0301_R008_T31TCH_20210810T132749.zip: 100%"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
