--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -2,56 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "![eodag logo](https://eodag.readthedocs.io/en/latest/_static/eodag_logo.png)"
-   ],
-   "metadata": {}
+    "![eodag logo](https://eodag.readthedocs.io/en/latest/_static/eodag_bycs.png)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Eodag search plugin user manual"
-   ],
-   "metadata": {}
+    "# eodag-labextension: user manual"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "The eodag-labextension JupyterLab plugin brings satellite imagery search ability. With that extension you can search products, see results and check if results suits to your needs and finally generate Python code allowing to access to those products in the notebook.\n",
+    "The `eodag-labextension` JupyterLab plugin brings satellite imagery search ability. With that extension you can search products, see results and check if results suits to your needs. And finally generate Python code allowing to access to those products in the notebook.\n",
     "\n",
-    "That tool is based on [eodag](https://eodag.readthedocs.io)."
-   ],
-   "metadata": {}
+    "That tool is based on [eodag](https://github.com/CS-SI/eodag). See the [Python API User Guide](https://eodag.readthedocs.io/en/stable/api_user_guide.html) for a complete overview of eodag features."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Configuration\n",
     "\n",
     "For some providers we don’t need to set up credentials to search for products. But if you wish to download them, you should set the credentials beforehand, using these two environment variables for instance."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Example for PEPS\n",
     "os.environ[\"EODAG__PEPS__AUTH__CREDENTIALS__USERNAME\"] = \"PLEASE_CHANGE_ME\"\n",
     "os.environ[\"EODAG__PEPS__AUTH__CREDENTIALS__PASSWORD\"] = \"PLEASE_CHANGE_ME\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "You can always configure eodag with your code, as shown in the [Configuration](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/3_configuration.html) page of eodag's [Python API User Guide](https://eodag.readthedocs.io/en/stable/api_user_guide.html)."
-   ],
-   "metadata": {}
+    "Credendials can be set dynamically using [environment variables](https://eodag.readthedocs.io/en/stable/getting_started_guide/configure.html#environment-variable-configuration) or also stored in the [configuration file](https://eodag.readthedocs.io/en/stable/getting_started_guide/configure.html#yaml-configuration-file) (recommanded). This file will be located at `$HOME/.config/eodag/eodag.yml`."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can always choose to configure eodag using the configuration file or dynamically within your code, as shown in the [Configuration](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/3_configuration.html) page of eodag's documentation.\n",
+    "\n",
+    "Configuration also includes providers priority, download destination (`outputs_prefix`), extraction, ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Search\n",
     "\n",
@@ -68,20 +78,20 @@
     "* **Additional parameters**: used to enter key-value pairs criteria for the request.\n",
     "\n",
     "You can draw multiple extents, or use none. Each extent can be a rectangle or a free polygon.\n",
-    "Product type is mandatory. Other criterias are optional.\n",
+    "Product type is mandatory. Other criteria are optional.\n",
     "\n",
     "Once search criteria are filled out, click on the \"Search\" button to proceed to next step. At the end of the search, a popup opens and displays results."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Results display\n",
+    "## Results overview\n",
     "\n",
     "![extension popup](./images/eodag_labext_popup.png)\n",
     "\n",
-    "The results display popup is compopsed of 3 parts:\n",
+    "The results overview popup is compopsed of 3 parts:\n",
     "\n",
     "* a map showing products extent,\n",
     "* a table listing products,\n",
@@ -90,78 +100,73 @@
     "The results table allows you to access product metadata by clicking on the desired product line. The magnifying glass button allows you to zoom in on the product's in the map view. By scrolling down in the list of results, the search is automatically restarted to retrieve the following results.\n",
     "\n",
     "In the metadata view, clicking on the thumbnail displays it in native resolution. Clicking it again reduces its size again."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Apply to the Jupyter notebook\n",
     "\n",
-    "If the search result is correct, clicking on the \"Apply\" button will insert the Python eodag code in a new cell of the currently open notebook. The popup is automatically closed. From there, it is possible to work in the notebook on the search results by executing the eodag search.\n",
+    "If the search result is correct, clicking on the \"`Apply`\" button will insert the Python eodag code in a new cell of the currently open notebook. The popup is automatically closed. From there, it is possible to work in the notebook on the search results by executing the eodag search.\n",
     "\n",
     "Here is an example of generated code:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from eodag import EODataAccessGateway\n",
+    "from eodag import EODataAccessGateway, setup_logging\n",
+    "\n",
+    "setup_logging(1) # 0: nothing, 1: only progress bars, 2: INFO, 3: DEBUG\n",
     "\n",
     "dag = EODataAccessGateway()\n",
-    "product_type = \"S2_MSI_L1C\"\n",
-    "footprint = {\n",
-    "    \"lonmin\": 0.660957,\n",
-    "    \"latmin\": 43.149093,\n",
-    "    \"lonmax\": 2.388008,\n",
-    "    \"latmax\": 44.190082,\n",
-    "}\n",
-    "cloud_cover = 15\n",
-    "start, end = \"2019-02-01\", \"2019-02-15\"\n",
-    "search_results, estimated_total_nbr_of_results = dag.search(\n",
-    "    productType=product_type,\n",
-    "    geometry=footprint,\n",
-    "    startTimeFromAscendingNode=start,\n",
-    "    completionTimeFromAscendingNode=end,\n",
-    "    cloudCover=cloud_cover,\n",
+    "geometry = \"POLYGON ((0.550136 43.005451, 0.550136 44.151469, 2.572104 44.151469, 2.572104 43.005451, 0.550136 43.005451))\"\n",
+    "search_results, total_count = dag.search(\n",
+    "  productType=\"S2_MSI_L1C\",\n",
+    "  geom=geometry,\n",
+    "  start=\"2021-08-01\",\n",
+    "  end=\"2021-08-11\",\n",
+    "  cloudCover=17,\n",
     ")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "The eodag configuration file should be located at `$HOME/.config/eodag/eodag.yml`. See [eodag documentation](https://eodag.readthedocs.io/en/latest/intro.html#how-to-configure-authentication-for-available-providers) for further informations.\n",
-    "\n",
-    "You may want to enforce usage of a particular provider. To do so, use `set_preferred_provider` and then execute a query like previously:"
-   ],
-   "metadata": {}
+    "You may want to enforce usage of a particular provider. To do so, use [set_preferred_provider()](https://eodag.readthedocs.io/en/stablesearch/notebooks/api_user_guide/3_configuration.html?#Set-a-provider's-priority) in  your search code after having instanciated [EODataAccessGateway](https://eodag.readthedocs.io/en/stable/api_reference/core.html#eodag.api.core.EODataAccessGateway):"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"theia\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Using results\n",
     "\n",
+    "The obtained `SearchResult` will contain several `EOProduct` objects. See [SearchResult and EOProduct](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/4_search.html#SearchResult-and-EOProduct) in the documentation for more information.\n",
+    "\n",
     "Here are some examples about how to use search results into a notebook:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "\n",
@@ -170,110 +175,76 @@
     "\n",
     "# Display products access paths\n",
     "pprint([p.location for p in search_results])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Extract products extent"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from eodag.api.search_result import SearchResult\n",
+    "from shapely.geometry import GeometryCollection\n",
     "\n",
-    "results_geojson = SearchResult(search_results).as_geojson_object()\n",
-    "\n",
-    "from shapely.geometry import shape, GeometryCollection\n",
-    "\n",
-    "features = results_geojson[\"features\"]\n",
     "features = GeometryCollection(\n",
-    "    [shape(feature[\"geometry\"]).buffer(0) for feature in features]\n",
+    "    [product.geometry for product in search_results]\n",
     ")\n",
     "features"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Display products extent on a slippy map"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from folium import Map, GeoJson, Figure\n",
     "\n",
     "ext = features.bounds\n",
     "bounds = [[ext[1], ext[0]], [ext[3], ext[2]]]\n",
     "m = Map(tiles=\"Stamen Terrain\", control_scale=True,)\n",
-    "GeoJson(results_geojson).add_to(m)\n",
+    "GeoJson(search_results).add_to(m)\n",
     "m.fit_bounds(bounds)\n",
     "Figure(width=500, height=300).add_child(m)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Downloading products\n",
     "\n",
-    "To download products from the search request into a sub-directory called `download`, run:"
-   ],
-   "metadata": {}
+    "See [Download EO products](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/7_download.html#Download-EO-products) in the documentation.\n",
+    "\n",
+    "To download all products from the search request into a sub-directory called `downloaded`, run:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "dag.download_all(search_results)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
    "source": [
-    "## Verbosity\n",
-    "\n",
-    "Eodag verbosity can be increased with following call with levels:\n",
-    "\n",
-    "- INFO: `verbose=1`\n",
-    "- DEBUG: `verbose=3`"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "from eodag.utils.logging import setup_logging\n",
-    "setup_logging(verbose=3)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "See [eodag documentation](https://eodag.readthedocs.io/) for more readings and tutorials about eodag library."
-   ],
-   "metadata": {}
+    "dag.download_all(search_results, outputs_prefix=\"downloaded\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -288,6 +259,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
