fix: absolute paths for images

--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -65,9 +65,9 @@
    "source": [
     "## Search\n",
     "\n",
-    "![extension logo](./images/eodag_labext_icon.png) Activate the plugin tab on the left of the JupuytuerLab interface by clicking on that icon.\n",
+    "![extension logo](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_icon.png) Activate the plugin tab on the left of the JupuytuerLab interface by clicking on that icon.\n",
     "\n",
-    "![extension form](./images/eodag_labext_form.png)\n",
+    "![extension form](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_form.png)\n",
     "\n",
     "With displayed search form, you can enter search extent and following search criteria:\n",
     "\n",
@@ -89,7 +89,7 @@
    "source": [
     "## Results overview\n",
     "\n",
-    "![extension popup](./images/eodag_labext_popup.png)\n",
+    "![extension popup](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_popup.png)\n",
     "\n",
     "The results overview popup is compopsed of 3 parts:\n",
     "\n",
