--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `eodag-labextension` JupyterLab plugin brings satellite imagery search ability. With that extension you can search products, see results and check if results suits to your needs. And finally generate Python code allowing to access to those products in the notebook.\n",
+    "The `eodag-labextension` JupyterLab plugin brings satellite imagery search ability. With that extension you can search products, see results and check if results suit your needs. And finally generate Python code allowing to access to those products in the notebook.\n",
     "\n",
     "That tool is based on [eodag](https://github.com/CS-SI/eodag). See the [Python API User Guide](https://eodag.readthedocs.io/en/stable/api_user_guide.html) for a complete overview of eodag features."
    ]
