--- a/notebooks/basic_usage.ipynb
+++ b/notebooks/basic_usage.ipynb
@@ -41,8 +41,11 @@
    "metadata": {},
    "source": [
     "## 2. Search\n",
-    "Please **select this notebook cell** and **use the left panel** to search for products. Then in the search results page, please click on the `apply` button (upper-right). See the [user manual](user_manual.ipynb) for further details.\n",
-    "This will automatically generate and insert the corresponding `eodag` search code bellow this cell. Execute it to continue the workflow."
+    "Please **select this notebook cell** and **use the left panel** to fill your search criteria, then directly click on `Generate Code` or `Preview Results`.\n",
+    "- `Generate Code` will automatically generate and insert the corresponding `eodag` search code bellow this cell.\n",
+    "- `Preview Results` will perform a search in background and display results with associated geometries, quicklooks, and metadata. Then from the search result page, click on `Generate Code` to insert search code bellow this cell.\n",
+    "\n",
+    "Execute the generated code to continue the workflow."
    ]
   },
   {
@@ -68,7 +71,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
