--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -71,7 +71,10 @@
     "\n",
     "With displayed search form, you can enter search extent and following search criteria:\n",
     "\n",
-    "* **Product type**: the searched product type. List filtering is performed using product types description keywords. For each entry of the drop-down list, a tooltip is displayed at hovering time with corresponding description.\n",
+    "* **Provider**: the provider on which to perform the search. If no provider is selected, search will loop on providers\n",
+    "  by [priority](https://eodag.readthedocs.io/en/stable/getting_started_guide/configure.html#priority-setting), and\n",
+    "  return the first non empty results.\n",
+    "* **Product type**: the searched product type. List filtering is performed using product types description keywords. For each entry of the drop-down list, a tooltip is displayed at hovering time with corresponding title.\n",
     "<img style=\"display: block;\" src=\"https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_product_types.png\" alt=\"product types\">\n",
     "\n",
     "* **Date range**: minimal and maximal dates of the search temporal window.\n",
@@ -265,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
