docs: update readme and user-manual

--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -88,9 +88,25 @@
     "<span style=\"clear: left; display:block;\"></span>\n",
     "Once search criteria are filled out, click on:\n",
     "- `Generate Code` to automatically generate and insert the corresponding eodag search code bellow the active cell.\n",
-    "- `Preview Results` to perform a search in background, display results, and generate search code in a second step.\n",
+    "- `Preview Results` to perform a search in background, display results, and generate search code in a second step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Settings\n",
     "\n",
-    "![settings logo](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_settings_icon.png) Click on this icon to open EODAG-Labextension settings. You will be enable to choose whether newly inserted code should replace existing search code or not."
+    "![reload logo](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_reload_icon.png)\n",
+    "Click on this icon to reload [EODAG configuration](https://eodag.readthedocs.io/en/stable/getting_started_guide/configure.html) \n",
+    "and take into account your updated credentials or providers settings.\n",
+    "\n",
+    "![settings logo](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_settings_icon.png)\n",
+    "Click on this icon to open EODAG-Labextension settings. You will be enable to:\n",
+    "- choose whether newly inserted code should replace existing search code or not;\n",
+    "- configure the default map settings.\n",
+    "\n",
+    "![settings tab](https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_settings_map.png)"
    ]
   },
   {
