refactor: adapt to eodag v3

--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "dag = EODataAccessGateway()\n",
     "geometry = \"POLYGON ((0.550136 43.005451, 0.550136 44.151469, 2.572104 44.151469, 2.572104 43.005451, 0.550136 43.005451))\"\n",
-    "search_results, total_count = dag.search(\n",
+    "search_results = dag.search(\n",
     "  productType=\"S2_MSI_L1C\",\n",
     "  geom=geometry,\n",
     "  start=\"2022-11-01\",\n",
