feat: update to eodag v4

--- a/notebooks/user_manual.ipynb
+++ b/notebooks/user_manual.ipynb
@@ -74,8 +74,8 @@
     "* **Provider**: the provider on which to perform the search. If no provider is selected, search will loop on providers\n",
     "  by [priority](https://eodag.readthedocs.io/en/stable/getting_started_guide/configure.html#priority-setting), and\n",
     "  return the first non empty results.\n",
-    "* **Product type**: the searched product type. List filtering is performed using product types description keywords. For each entry of the drop-down list, a tooltip is displayed at hovering time with corresponding title.\n",
-    "<img style=\"display: block;\" src=\"https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_product_types.png\" alt=\"product types\">\n",
+    "* **Collection**: the searched collection. List filtering is performed using collections description keywords. For each entry of the drop-down list, a tooltip is displayed at hovering time with corresponding title.\n",
+    "<img style=\"display: block;\" src=\"https://raw.githubusercontent.com/CS-SI/eodag-labextension/develop/notebooks/images/eodag_labext_product_types.png\" alt=\"collections\">\n",
     "\n",
     "* **Date range**: minimal and maximal dates of the search temporal window.\n",
     "* **Max cloud cover**: maximum cloud cover allowed in search results in percent. 100% will disable cloud cover filtering.\n",
@@ -83,7 +83,7 @@
     "\n",
     "As **search geometry** you can draw multiple extents, or use none. Each extent can be a rectangle or a free polygon.\n",
     "\n",
-    "*Product type is mandatory. Other criteria are optional.*\n",
+    "*Collection is mandatory. Other criteria are optional.*\n",
     "\n",
     "<span style=\"clear: left; display:block;\"></span>\n",
     "Once search criteria are filled out, click on:\n",
@@ -152,7 +152,7 @@
     "dag = EODataAccessGateway()\n",
     "geometry = \"POLYGON ((0.550136 43.005451, 0.550136 44.151469, 2.572104 44.151469, 2.572104 43.005451, 0.550136 43.005451))\"\n",
     "search_results = dag.search(\n",
-    "  productType=\"S2_MSI_L1C\",\n",
+    "  collection=\"S2_MSI_L1C\",\n",
     "  geom=geometry,\n",
     "  start=\"2022-11-01\",\n",
     "  end=\"2022-11-10\",\n",
